# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-20 15:20:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-90

    Summary:
      More checkpointing
    Revision:
      missingh--head--0.7--patch-90


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs


2004-12-20 15:17:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-89

    Summary:
      Checkpointing again
    Revision:
      missingh--head--0.7--patch-89


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs


2004-12-20 15:03:58 GMT	John Goerzen <jgoerzen@complete.org>	patch-88

    Summary:
      Checkpointing -- initial interface done
    Revision:
      missingh--head--0.7--patch-88


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs


2004-12-20 14:44:49 GMT	John Goerzen <jgoerzen@complete.org>	patch-87

    Summary:
      Start of HVFS
    Revision:
      missingh--head--0.7--patch-87


    new files:
     libsrc/MissingH/IO/HVFS.hs

    modified files:
     ChangeLog

    renamed files:
     pending/HVIO.hs
       ==> libsrc/MissingH/IO/HVIO.hs


2004-12-19 22:07:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-86

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-86


    modified files:
     ChangeLog


2004-12-17 22:59:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-85

    Summary:
      added tests
    Revision:
      missingh--head--0.7--patch-85


    new files:
     .arch-ids/test2.hs.id .arch-ids/test3.hs.id test2.hs test3.hs

    modified files:
     ChangeLog


2004-12-17 22:48:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-84

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-84


    modified files:
     ChangeLog libsrc/MissingH/Network.hs
     libsrc/MissingH/Network/SocketServer.hs


2004-12-17 22:03:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-83

    Summary:
      Checkpointing